fix: display on mobile discord members

--- a/app/assets/stylesheets/pages/home.css
+++ b/app/assets/stylesheets/pages/home.css
@@ -162,21 +162,25 @@ a:hover {
 }
 
 .discord-box {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  background-image: url(discord-mobile.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 456px;
+  border-radius: 24px 24px 0 0;
+  padding: 1rem;
 }
 
 .discord-cta {
-  position: absolute;
-  top: 2rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  padding-bottom: 1rem;
 }
 
 .discord-cta__count {
@@ -200,14 +204,13 @@ a:hover {
 }
 
 .discord-members-list {
-  display: none;
+  display: flex;
   width: 100%;
   justify-content: center;
 }
 
 .discord-members-list ul {
   display: flex;
-  width: 35%;
   justify-content: center;
   flex-wrap: wrap;
   margin: 1rem auto;
@@ -336,6 +339,7 @@ a:hover {
     opacity: 0;
     visibility: hidden;
   }
+
   100% {
     opacity: 1;
     visibility: visible;
